# esp32s3_bot

./: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.old
assets/: role_list copy.json  role_list.json
assets/PICTURE/: example.txt
assets/VIDEO/: 0.avi  1.avi
main/: CMakeLists.txt  MyApp.h  idf_component.yml  main.cc  myApp.cc  wifi_manager.cc  wifi_manager.h
main/audio_codecs/: audio_codec.cc  audio_codec.h  no_audio_codec.cc  no_audio_codec.h
main/board/: board.cc  board.h  compact_wifi_board_lcd.cc  wifi_board.cc  wifi_board.h
main/display/: display.cc  display.h  lcd_display.cc  lcd_display.h
main/http/: ai_role.cc  ai_role.h  function_type.h  http_client.cc  http_client.h  http_server.cc  http_server.h
main/protocols/: protocol.h  websocket_protocol.cc  websocket_protocol.h
main/sd/: sd_init.c  sd_init.h  spi_init.c  spi_init.h
main/ui/: ui.c  ui.h
main/ui/img/: default1.c  default2.c  default3.c  qrcode.c
main/utils/: base64_encoder.cc  base64_encoder.h
